<resources>
    <string name="app_name">Chapter11App</string>
    <string name="txtTitle">Car Financing App</string>
    <string name="hint1">Number of Years</string>
    <string name="hint2">Car Laon Amount</string>
    <string name="hint3">Interest Rate</string>
    <string name="btnPayment">Car Payment</string>
    <string name="imgDescription">Number of Years Image</string>
    <string name="txtPayment">Monthly Payment</string>
    <string name="btnTexst"> Third Activity</string>
    <string name="hint"> Enter Text</string>
    <string name="btnW"> Write to the file</string>
    <string name="btnR">Read the file</string>
</resources>
